<resources>
    <string name="app_name">Memoria</string>

    <string name="titulo">Manejo de memoria</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_correo">Correo</string>
    <string name="btnGuardar">Guardar Archivo</string>
    <string name="btnGuardarPreferencia">Guardar Preferencia</string>
    <string name="btnMostrarPreferencia">Mostrar Preferencia</string>
</resources>
