<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.juancrud.memoria.MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal" />
    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre" />
    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_correo" />
    <Button
        android:id="@+id/btnGuardarPreferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardarPreferencia"
        android:onClick="guardarPreferencia"/>
    <Button
        android:id="@+id/btnMostrarPreferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnMostrarPreferencia"
        android:onClick="mostrarPreferencia"/>
    <Button
        android:id="@+id/btnGuardarArchivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardar"
        android:onClick="generarArchivo"/>

    <TextView
        android:id="@+id/tvPreferenciaCompartida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />


</LinearLayout>
